src/objects/Target_PEC_PEs_Sched__c.object
<CustomObject>
    <description>Target # of Prostho Exams Scheduled per month</description>
    <fields>
        <fullName>Center_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Center Location</label>
        <referenceTo>Center_Location__c</referenceTo>
        <relationshipName>PESchedTargets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>When does this target become effective?</description>
        <inlineHelpText>When does this target become effective? (Can be set in advance of becoming effective.)</inlineHelpText>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Number__c</fullName>
        <description>Target number of Prostho Exams to be completed in a month</description>
        <label>Target Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Target: PEC PEs Scheduled</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>PESched ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Target: PEC PEs Scheduled</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>